--- a/privacy.html
+++ b/privacy.html
@@ -9,12 +9,9 @@
     </style>
 </head>
 <body>
-    <h1>隱私權政策</h1>
+    <h1>隱私權政策 1.0</h1>
     <p>最後更新日期：2025年8月25日</p>
     <hr>
-
-    隱私權政策
-最後更新日期：2025年8月25日
 本隱私權政策闡明本公司在您使用本服務時，關於收集、使用和揭露您資訊的政策與程序，並告知您所享有的隱私權以及法律如何保護您。
 我們使用您的個人資料以提供並改善本服務，一旦使用本服務，即表示您同意我們根據本隱私權政策收集與使用資訊。
 壹、名詞定義
@@ -97,6 +94,5 @@
 拾貳、聯絡我們
 如果您對本隱私權政策有任何疑問，可以透過以下方式聯繫我們：
 電子郵件： service@yourmate.tw
-
 </body>
 </html>
