--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隱私權政策</title>
+    <title>隱私權政策 1.0</title>
     
     <style>
         body { 
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-    <h1>隱私權政策</h1>
+    <h1>隱私權政策 1.0</h1>
     <p class="update-date">最後更新日期：2025年8月25日</p>
     
     <p>本隱私權政策闡明本公司在您使用本服務時，關於收集、使用和揭露您資訊的政策與程序，並告知您所享有的隱私權以及法律如何保護您。</p>
