--- a/terms.html
+++ b/terms.html
@@ -3,57 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隱私權政策</title>
+    <title>使用者服務條款 1.0</title>
+    
     <style>
-        body { font-family: sans-serif; line-height: 1.6; padding: 20px; max-width: 800px; margin: 0 auto; }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; 
+            line-height: 1.8; 
+            padding: 20px; 
+            max-width: 800px; 
+            margin: 0 auto; 
+            color: #333;
+        }
+        h1 {
+            font-size: 2em;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+            text-align: center;
+        }
+        h2 {
+            font-size: 1.5em;
+            margin-top: 40px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        /* 處理巢狀列表的縮排 */
+        ul ul {
+            margin-top: 10px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        strong {
+            color: #000;
+        }
+        .update-date {
+            text-align: center;
+            color: #666;
+            margin-bottom: 30px;
+        }
+        hr {
+            border: none;
+            border-top: 1px solid #eee;
+            margin: 40px 0;
+        }
     </style>
 </head>
 <body>
-    <h1>使用者條款 1.0</h1>
-    <p>最後更新日期：2025年8月25日</p>
+
+    <h1>使用者服務條款 1.0</h1>
+    <p class="update-date">生效日期：2025年8月25日</p>
+    
     <hr>
-壹、認知與接受條款
-歡迎您使用「交換日記」（以下簡稱「本服務」），本使用者服務條款（以下簡稱「本條款」）旨在規範您與本公司之間因使用本服務所生的權利義務關係。當您完成註冊程序、或開始使用本服務時，即表示您已詳細閱讀、了解並完全同意接受本條款之所有內容。
-若您為未滿十八歲之未成年人，應於您的法定代理人（或監護人）閱讀、了解並同意本條款之所有內容後，方得註冊及使用本服務。當您開始使用本服務時，即視為您的法定代理人（或監護人）已符合前述之要求。
-貳、服務說明
-本服務提供一個以匿名交換日記為核心的社群平台，使用者可每日撰寫日記，並由系統隨機配對一位使用者進行交換。若雙方均表示同意，將開啟一個具時效性（24小時）的私人聊天室。本服務旨在提供一個真誠、友善的交流空間。
-參、使用者帳號、密碼與安全
-您有義務妥善保管在本服務註冊的帳號與密碼，並為此組帳號與密碼登入系統後所進行之一切活動負責。
-您承諾於註冊時提供您本人正確、最新及完整的資料，並隨時維持其有效性。若您提供任何錯誤或不實的資料，本公司有權暫停或終止您的帳號。
-肆、使用者行為與內容規範 (核心條款)
-您承諾絕不為任何非法目的或以任何非法方式使用本服務，並承諾遵守中華民國相關法規及一切使用網際網路之國際慣例。您同意並保證不得利用本服務從事侵害他人權益或違法之行為，包括但不限於：
-禁止非法內容：嚴格禁止張貼、傳輸或散佈任何違反中華民國法律之內容，包括但不限於涉及毒品、槍械、暴力、賭博、或教唆他人犯罪之資訊。
-禁止有害與歧視性言論：嚴格禁止發表任何形式的誹謗、侮辱、威脅、騷擾、霸凌、歧視（基於種族、宗教、性別、性向、年齡、身心障礙等）、或攻擊性之言論。
-禁止色情與不雅內容：嚴格禁止張貼、傳輸或散佈任何涉及猥褻、色情、裸露、性暗示、或違反公共秩序或善良風俗之文字、圖片或任何形式的檔案。
-禁止侵害他人權益：
-不得侵害他人之名譽、隱私權、營業秘密、商標權、著作權、專利權等智慧財產權及其他權利。
-不得在未經他人同意的情況下，蒐集、處理或利用他人之個人資料。
-不得冒用他人名義使用本服務。
-禁止不實資訊與詐騙：不得散播不實資訊、垃圾訊息、廣告郵件、連鎖信、或從事任何形式的詐欺行為。
-禁止危害系統安全：不得從事任何對於本服務之系統安全或穩定性可能造成危害之行為，包括但不限於植入病毒、駭客攻擊或進行惡意測試。
-其他：不得從事其他本公司有正當理由認為不適當之行為。
-您應對您在本服務上發布的所有內容負完全的法律責任。
-伍、內容所有權與授權
-您在本服務上所創作、發布或分享之任何內容（包括但不限於日記文字、訊息等），其智慧財產權仍歸屬於您本人。
-然而，當您使用本服務時，即表示您同意授予本公司一個全球性、非專屬、無償、可轉讓且可再授權的權利，得使用、重製、散布、展示及執行您的內容。惟此授權之唯一目的，係為了營運、推廣及改善本服務（例如：將您的日記內容提供予配對之使用者，或於聊天室中顯示您的訊息）。本公司絕不會在未經您明確同意的情況下，將您的個人創作內容用於前述目的之外的商業用途。
-陸、服務暫停與終止
-本公司有權單方面判斷您的行為是否違反本條款之精神與內容。
-若您有任何違反本條款之情事，本公司有權不經事前通知，逕行採取以下一項或多項措施：
-刪除或移除違規內容。
-暫時停止您使用本服務之權限。
-永久終止您的帳號。
-您同意本公司就您違反本條款之行為所採取之任何措施，對您或任何第三方均不負任何責任。
-柒、免責聲明
-本服務係以「現況」及「現有」之基礎提供。本公司不對任何使用者之行為或其發布內容之真實性、合法性、正確性作任何明示或默示之擔保。
-您應自行判斷並承擔與其他使用者互動之一切風險。 本公司不介入使用者間的私人交流與可能引發的爭議，亦不對任何使用者因他人行為所受之損害負責。
-本公司不保證本服務將完全不受干擾、及時提供、安全可靠或不會出錯。對於因天災、系統故障、駭客攻擊等不可抗力因素所造成的服務中斷或資料損失，本公司將盡力維護，但不負賠償責任。
-捌、準據法與管轄法院
-本條款之解釋與適用，以及因本條款而生之爭議或糾紛，均應以中華民國法律為準據法。
-因本服務所生之爭議，雙方同意以臺灣臺北地方法院為第一審管轄法院。
-玖、條款修訂
-本公司保留隨時修改本條款之權利。修改後之條款內容將公布於本服務應用程式內，並自公布之時起生效。我們建議您定期查閱。若您於任何修改或變更後繼續使用本服務，即視為您已閱讀、了解並同意接受該等修改或變更。
-拾、聯絡我們
-若您對本條款有任何疑問，歡迎隨時透過以下電子郵件與我們聯繫：
-service@yourmate.tw
+
+    <h2>壹、認知與接受條款</h2>
+    <p>歡迎您使用「交換日記」（以下簡稱「本服務」），本使用者服務條款（以下簡稱「本條款」）旨在規範您與本公司之間因使用本服務所生的權利義務關係。當您完成註冊程序、或開始使用本服務時，即表示您已詳細閱讀、了解並完全同意接受本條款之所有內容。</p>
+    <p>若您為未滿十八歲之未成年人，應於您的法定代理人（或監護人）閱讀、了解並同意本條款之所有內容後，方得註冊及使用本服務。當您開始使用本服務時，即視為您的法定代理人（或監護人）已符合前述之要求。</p>
+
+    <h2>貳、服務說明</h2>
+    <p>本服務提供一個以匿名交換日記為核心的社群平台，使用者可每日撰寫日記，並由系統隨機配對一位使用者進行交換。若雙方均表示同意，將開啟一個具時效性（24小時）的私人聊天室。本服務旨在提供一個真誠、友善的交流空間。</p>
+
+    <h2>參、使用者帳號、密碼與安全</h2>
+    <p>您有義務妥善保管在本服務註冊的帳號與密碼，並為此組帳號與密碼登入系統後所進行之一切活動負責。</p>
+    <p>您承諾於註冊時提供您本人正確、最新及完整的資料，並隨時維持其有效性。若您提供任何錯誤或不實的資料，本公司有權暫停或終止您的帳號。</p>
+
+    <h2>肆、使用者行為與內容規範 (核心條款)</h2>
+    <p>您承諾絕不為任何非法目的或以任何非法方式使用本服務，並承諾遵守中華民國相關法規及一切使用網際網路之國際慣例。您同意並保證不得利用本服務從事侵害他人權益或違法之行為，包括但不限於：</p>
+    <ul>
+        <li><strong>禁止非法內容：</strong>嚴格禁止張貼、傳輸或散佈任何違反中華民國法律之內容，包括但不限於涉及毒品、槍械、暴力、賭博、或教唆他人犯罪之資訊。</li>
+        <li><strong>禁止有害與歧視性言論：</strong>嚴格禁止發表任何形式的誹謗、侮辱、威脅、騷擾、霸凌、歧視（基於種族、宗教、性別、性向、年齡、身心障礙等）、或攻擊性之言論。</li>
+        <li><strong>禁止色情與不雅內容：</strong>嚴格禁止張貼、傳輸或散佈任何涉及猥褻、色情、裸露、性暗示、或違反公共秩序或善良風俗之文字、圖片或任何形式的檔案。</li>
+        <li><strong>禁止侵害他人權益：</strong>
+            <ul>
+                <li>不得侵害他人之名譽、隱私權、營業秘密、商標權、著作權、專利權等智慧財產權及其他權利。</li>
+                <li>不得在未經他人同意的情況下，蒐集、處理或利用他人之個人資料。</li>
+                <li>不得冒用他人名義使用本服務。</li>
+            </ul>
+        </li>
+        <li><strong>禁止不實資訊與詐騙：</strong>不得散播不實資訊、垃圾訊息、廣告郵件、連鎖信、或從事任何形式的詐欺行為。</li>
+        <li><strong>禁止危害系統安全：</strong>不得從事任何對於本服務之系統安全或穩定性可能造成危害之行為，包括但不限於植入病毒、駭客攻擊或進行惡意測試。</li>
+        <li><strong>其他：</strong>不得從事其他本公司有正當理由認為不適當之行為。</li>
+    </ul>
+    <p><strong>您應對您在本服務上發布的所有內容負完全的法律責任。</strong></p>
+
+    <h2>伍、內容所有權與授權</h2>
+    <p>您在本服務上所創作、發布或分享之任何內容（包括但不限於日記文字、訊息等），其智慧財產權仍歸屬於您本人。</p>
+    <p>然而，當您使用本服務時，即表示您同意授予本公司一個全球性、非專屬、無償、可轉讓且可再授權的權利，得使用、重製、散布、展示及執行您的內容。惟此授權之唯一目的，係為了營運、推廣及改善本服務（例如：將您的日記內容提供予配對之使用者，或於聊天室中顯示您的訊息）。本公司絕不會在未經您明確同意的情況下，將您的個人創作內容用於前述目的之外的商業用途。</p>
+
+    <h2>陸、服務暫停與終止</h2>
+    <p>本公司有權單方面判斷您的行為是否違反本條款之精神與內容。</p>
+    <p>若您有任何違反本條款之情事，本公司有權不經事前通知，逕行採取以下一項或多項措施：</p>
+    <ul>
+        <li>刪除或移除違規內容。</li>
+        <li>暫時停止您使用本服務之權限。</li>
+        <li>永久終止您的帳號。</li>
+    </ul>
+    <p>您同意本公司就您違反本條款之行為所採取之任何措施，對您或任何第三方均不負任何責任。</p>
+
+    <h2>柒、免責聲明</h2>
+    <p>本服務係以「現況」及「現有」之基礎提供。本公司不對任何使用者之行為或其發布內容之真實性、合法性、正確性作任何明示或默示之擔保。</p>
+    <p><strong>您應自行判斷並承擔與其他使用者互動之一切風險。</strong> 本公司不介入使用者間的私人交流與可能引發的爭議，亦不對任何使用者因他人行為所受之損害負責。</p>
+    <p>本公司不保證本服務將完全不受干擾、及時提供、安全可靠或不會出錯。對於因天災、系統故障、駭客攻擊等不可抗力因素所造成的服務中斷或資料損失，本公司將盡力維護，但不負賠償責任。</p>
+
+    <h2>捌、準據法與管轄法院</h2>
+    <p>本條款之解釋與適用，以及因本條款而生之爭議或糾紛，均應以中華民國法律為準據法。</p>
+    <p>因本服務所生之爭議，雙方同意以臺灣臺北地方法院為第一審管轄法院。</p>
+
+    <h2>玖、條款修訂</h2>
+    <p>本公司保留隨時修改本條款之權利。修改後之條款內容將公布於本服務應用程式內，並自公布之時起生效。我們建議您定期查閱。若您於任何修改或變更後繼續使用本服務，即視為您已閱讀、了解並同意接受該等修改或變更。</p>
+
+    <h2>拾、聯絡我們</h2>
+    <p>若您對本條款有任何疑問，歡迎隨時透過以下電子郵件與我們聯繫：</p>
+    <ul>
+        <li><strong>電子郵件：</strong> service@yourmate.tw</li>
+    </ul>
+
 </body>
 </html>
